--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.9.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22",
+    "tslib": "^2.6.0",
     "validator": "^13.9.0"
   }
 }
