--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "firebase": "^9.23.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -22,8 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": ".env && react-scripts start",
+    "build": ".env && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
